# Soc_China

./: .gitignore  RDK_X5_HAZARD_DETECTOR_HANDOFF_20260606.md  README.md  README_cn.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
app/: .gitignore  API_SPEC.md  BACKEND_PROMPT_command_api.md  BACKEND_PROMPT_integration_test.md  BACKEND_PROMPT_mapping_mode.md  BACKEND_PROMPT_teleop.md  BACKEND_PROMPT_voice_control.md  FRONTEND_PROMPT_mapping_mode.md  FRONTEND_PROMPT_teleop.md  INTEGRATION.md  README.md
app/backend/: assets.py  commands.py  config.py  images.py  ingest.py  push.py  schema.sql  seed.py  server.py  sim_feed.py  store.py  teleop.py
app/mobile/: README.md  pubspec.yaml
app/web/: index.html  manifest.webmanifest  service-worker.js
docs/: README.md  code_upload_log.md
docs/architecture/: README.md  camera_ingest.md  gimbal_control_flow.md  l15_small_vlm_research.md  qwen_local_vlm_setup.md  thermal_multimodal_hazard_detector.md  three_layer_hazard_decision.md  voice_asr_autostart_handoff.md  voice_asr_setup.md  voice_broadcast_setup.md  (+1 more)
docs/hardware/: README.md  (+6 more)
evidence/: INDEX.md
rdk_x5/: README.md
rdk_x5/ros2_ws/src/bmi088_imu/: package.xml  setup.cfg  setup.py
rdk_x5/ros2_ws/src/bmi088_imu/bmi088_imu/: bmi088.py  bmi088_imu_node.py
rdk_x5/ros2_ws/src/bmi088_imu/launch/: bmi088_imu.launch.py
rdk_x5/ros2_ws/src/bmi088_imu/test/: test_gyro_only.py
rdk_x5/ros2_ws/src/chassis_bringup/: README.md  package.xml  setup.cfg  setup.py
rdk_x5/ros2_ws/src/chassis_bringup/chassis_bringup/: send_goal.py  waypoint_patrol.py
rdk_x5/ros2_ws/src/chassis_bringup/config/: ekf.yaml  ekf_imu.yaml  nav2_params.yaml  slam_toolbox.yaml  waypoints.example.yaml
rdk_x5/ros2_ws/src/chassis_bringup/description/: chassis.urdf
rdk_x5/ros2_ws/src/chassis_bringup/launch/: bringup.launch.py  description.launch.py  mapping.launch.py  nav.launch.py  slam.launch.py  tf_static.launch.py
rdk_x5/ros2_ws/src/chassis_bringup/tests/: test_send_goal.py
rdk_x5/ros2_ws/src/gimbal_laser/: README.md  package.xml  setup.cfg  setup.py
rdk_x5/ros2_ws/src/gimbal_laser/config/: gimbal.yaml  visual_servo.yaml
rdk_x5/ros2_ws/src/gimbal_laser/gimbal_laser/: __init__.py  as5600.py  gimbal_aim_node.py  gimbal_controller.py  gimbal_controller_node.py  laser_node.py  rdk_x5_gpio.py  rdk_x5_pwm.py  visual_servo.py
rdk_x5/ros2_ws/src/gimbal_laser/launch/: gimbal_controller.launch.py
rdk_x5/ros2_ws/src/gimbal_laser/resource/: gimbal_laser
rdk_x5/ros2_ws/src/inspection_manager/: package.xml  setup.cfg  setup.py
rdk_x5/ros2_ws/src/inspection_manager/config/: asr.yaml  cognition.yaml  command_receiver.yaml  gimbal_aim.yaml  recheck_poses.yaml  report.yaml  stations.yaml  uplink.yaml
rdk_x5/ros2_ws/src/inspection_manager/inspection_manager/: acceptance_node.py  actions.py  asr_controller.py  asr_engine.py  asr_node.py  cognition.py  cognition_node.py  command_executor.py  command_receiver.py  command_receiver_node.py  config.py  desk_acceptance.py  dialog.py  escalation.py  events.py  intent.py  mode_switch.py  qwen_client.py  recheck.py  recheck_node.py  report.py  report_service.py  sim_hazard_publisher.py  sim_scenarios.py  station_map.py  tts.py  uplink.py  uplink_node.py  voice_node.py  workstation_record.py  workstation_record_node.py
rdk_x5/ros2_ws/src/inspection_manager/launch/: inspection.launch.py
rdk_x5/ros2_ws/src/perception_camera/: README.md  package.xml  setup.cfg  setup.py
rdk_x5/ros2_ws/src/perception_camera/config/: fixed_camera.yaml  fixed_camera_wifi.yaml
rdk_x5/ros2_ws/src/perception_camera/launch/: fixed_camera.launch.py
rdk_x5/ros2_ws/src/perception_camera/perception_camera/: __init__.py  fixed_camera_node.py
rdk_x5/ros2_ws/src/perception_camera/resource/: perception_camera
rdk_x5/ros2_ws/src/stm32_bridge/: README.md  package.xml  setup.cfg  setup.py
rdk_x5/ros2_ws/src/stm32_bridge/config/: stm32_bridge.yaml
rdk_x5/ros2_ws/src/stm32_bridge/launch/: stm32_bridge.launch.py
rdk_x5/ros2_ws/src/stm32_bridge/stm32_bridge/: mecanum_odometry.py  stm32_bridge_node.py
rdk_x5/ros2_ws/src/teleop_safety/: README.md  package.xml  setup.py
rdk_x5/ros2_ws/src/teleop_safety/config/: teleop_safety.yaml
rdk_x5/ros2_ws/src/teleop_safety/launch/: teleop_safety.launch.py
rdk_x5/ros2_ws/src/teleop_safety/teleop_safety/: gate.py  lidar_safety_node.py  teleop_receiver_node.py
rdk_x5/ros2_ws/src/thermal_detector/: README.md  package.xml  setup.cfg  setup.py
rdk_x5/ros2_ws/src/thermal_detector/config/: thermal_hazard.yaml  thermal_rgb_calib.yaml
rdk_x5/ros2_ws/src/thermal_detector/launch/: hazard_fusion.launch.py
rdk_x5/ros2_ws/src/thermal_detector/thermal_detector/: config_loader.py  fusion.py  hazard_fusion_node.py  hazard_pipeline.py  image_geometry.py  rgb_hazard_node.py  ros_payloads.py  senxor_driver.py  thermal_detector_node.py
rdk_x5_lab_detector_deploy_20260603/: RDK_X5_NEXT_STEPS.md  README.md  results.csv
shared/: README.md  __init__.py
sim/: README.md
stm32/: README.md
tests/: test_actions.py  test_app_assets.py  test_app_commands.py  test_app_ingest.py  test_app_push.py  test_app_store.py  test_app_teleop.py  test_asr_controller.py  test_asr_engine.py  test_bmi088_scaling.py  test_cognition.py  test_command_executor.py  test_command_receiver.py  test_desk_acceptance.py  test_dialog.py  test_escalation.py  test_executors.py  test_gimbal_as5600.py  test_gimbal_controller.py  test_gimbal_hardware_mapping.py  test_hazard_pipeline.py  test_image_geometry.py  test_inspection_events.py  test_inspection_pipeline.py  test_intent.py  test_laser.py  test_mecanum_odometry.py  test_mode_switch.py  test_qwen_client.py  test_rdk_stm32_uart.py  test_report.py  test_ros_payloads.py  test_senxor_driver.py  test_station_map.py  test_stm32_c_modules.py  test_stm32_main_uart_integration.py  test_stm32_simulator.py  test_teleop_gate.py  test_thermal_config.py  test_thermal_fusion.py  (+6 more)
tools/: README.md  collect_logs.sh  run_smoke_test.sh  setup_rdk.sh
yolo_lab_training_export_20260603/: TRAINING_RESULT_SUMMARY_ZH.md
(+227 files in other folders)
