<?xml version="1.0"?>
<package format="3">
  <name>bmi088_imu</name>
  <version>0.1.0</version>
  <description>BMI088 IMU I2C driver for RDK X5 -> sensor_msgs/Imu on /imu.</description>
  <maintainer email="rongzechen@example.com">Soc China Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-smbus2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
