<?xml version="1.0"?>
<package format="3">
  <name>inspection_manager</name>
  <version>0.1.0</version>
  <description>Three-layer hazard decision Layers 2/3: local cognition (small VLM) + on-demand cloud report, consuming Layer 1 /hazard/events.</description>
  <maintainer email="rongzechen@example.com">Soc China Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
