<?xml version="1.0"?>
<package format="3">
  <name>perception_camera</name>
  <version>0.1.0</version>
  <description>Fixed monitoring camera ingress for RDK X5 ROS2 pipelines.</description>
  <maintainer email="rongzechen@example.com">Soc China Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
