<?xml version="1.0"?>
<package format="3">
  <name>stm32_bridge</name>
  <version>0.1.0</version>
  <description>RDK X5 to STM32F411 chassis UART bridge: /cmd_vel to CMD_VEL, STM32 ODOM/STATUS to /odom + TF.</description>
  <maintainer email="rongzechen@example.com">Soc China Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
